fix - move arrows to title
- currently arrows are on either side of the chart, making them somewhat hard to see
- to fix this, moved them to either side of the title
- also made title fixed length so arrows don't move around

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ div.legendTooltip {
     display: block;
 }
 
-#outer {
+.horizontalStack {
     width: 100%;
     display: flex;
     align-items: center;
